Update dependency org.robolectric:robolectric from 4.16.1 to 4.17 (#705)
Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Róbert Papp <papp.robert.s@gmail.com>